--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -32,10 +32,11 @@
   margin-top: 85px;
 }
 
-.chat__write {
+/* input이 icon 앞에 있으면 input에 이벤트가 발생 했을 때 icon을 숨길(transition) 수 있음 */
+.chat__write-container {
   position: fixed;
-  width: 80%;
-  bottom: 50px;
+  bottom: 0;
+  width: 100%;
 
   /* fixed 가운데 정렬 */
   margin: 0 auto;
@@ -45,38 +46,76 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
-  background-color: #fff9db;
-  border-radius: 40px;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
-.chat__write i {
-  font-size: 22px;
+.chat__icon-left {
+  position: absolute;
+  color: #26282d;
+  left: 10px;
 }
 
-.chat__write-column:nth-child(2) {
-  width: 80%;
+.chat__icon-right {
+  position: absolute;
+  color: #26282d;
+  right: 10px;
 }
 
-.chat__write-column input {
-  padding: 20px 10px;
+@keyframes float {
+  0% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  50% {
+    box-shadow: 0 30px 60px -60px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+  100% {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  }
+}
+
+.chat__write {
+  bottom: 0px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 0;
+  padding: 20px 60px;
   width: 100%;
   border: none;
   font-size: 14px;
   background-image: linear-gradient(
-    to right,
+    to left,
     #fff9db,
     #ffe066,
     #ffec99,
     #fff3bf,
     #fff9db
   );
+  transition: width 0.3s ease-in-out, border-radius 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
 }
 
-.chat__write-column input:focus {
+/* 에니메이션을 넣을 곳 */
+.chat__write:focus {
   outline: none;
+  width: 80%;
+  transform: translateY(-50px);
+  border-radius: 40px;
+  animation: float 3s linear infinite forwards;
+}
+
+.chat__icon {
+  font-size: 22px;
+  transition: opacity ease-in-out 0.3s;
+}
+
+/* ~ 표시는 .chat__write(input) 클래스 다음에 있는 sibling을 선택 */
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
 }
 
 .chat-screen .chat__messages {
@@ -137,11 +176,23 @@
   font-size: 14px;
 }
 
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+}
+
 .incoming-message img {
   width: 50px;
   background-color: #fff9db;
   border-radius: 38%;
   margin-right: 15px;
+  animation: spin 2s linear infinite;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
 }
 
 .message .message__bubble {
@@ -160,4 +211,35 @@
 
 .sent-message .message__bubble {
   border-top-right-radius: 2%;
+}
+
+@keyframes incomingAnim {
+  from {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+/* forwards는  끝까지 요소가 마지막 value를 유지하는 것*/
+.incoming-message {
+  animation: incomingAnim 0.5s ease-out forwards;
+}
+
+@keyframes sentAnim {
+  from {
+    opacity: 0;
+    transform: translateX(200px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.sent-message {
+  animation: sentAnim 0.5s ease-out forwards;
 }
